[package]
name = "bevy_github_ci_template"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = "0.8"
# bevy_tweening = "0.5.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
